Placed results graph

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -481,8 +481,8 @@ of which university to choose by averaging different metrics supplied by the dat
 
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=9cm]{img/results}
-\caption{Results, condition A and B shown.}
+\includegraphics[width=8.5cm]{img/results}
+\caption{The chosen restaurant/university for each participant, showing the choice on the x axis and frequency on the y axis under conditions A and B.}
 \label{fig:results}
 \end{center}
 \end{figure}
