--- a/chi2012.tex
+++ b/chi2012.tex
@@ -462,10 +462,12 @@ To determine whether participants used the data integration features of DP, we l
 
 Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixteen (80\%) used \emph{Same-As} as least once; among these participants, they used \emph{Same-As} an average of 4.6 times per trial. We counted a single ``use'' as a single drag-and-drop of an individual item, or a drag-and-drop operation of an entire group onto another.  (We did not differentiate enumerated value consolidation from entity consolidation, as these operations were not discernably different from the interface perspective.)
 
-\subsection{Use of Visualisation Features}
+% we examined use on performance but nothing significant was found :/
 
+\subsection{Use of Visualisation Features}
 To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
 
+%% -> discussion and limitations
 \subsection{Condition A (DataPalette)}
 In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
 
