--- a/chi2012.tex
+++ b/chi2012.tex
@@ -397,7 +397,7 @@ During the data collection we collated a spreadsheet summarising the participant
 
 Twenty-six (26) participants responded, from which we selected the first 20.  Ten participants were female.  All of the participants spoke English, but 12 of them were non-native English speakers.  Seven were non-students; out of the remaining 13, eight studied computer science and 5 studied other subjects.   On average, each study took 40 mins to complete.
 
-The information in Table \ref{tbl:data} summarizes the metrics that were captured of the trials for each participant. We analyze this data next.
+The information in Table \ref{tbl:data} summarises the metrics that were captured of the trials for each participant. We analyse this data next.
 
 \begin{table*}[htdp]
 \small
@@ -480,7 +480,7 @@ of which university to choose by averaging different metrics supplied by the dat
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=8.5cm]{img/results}
-\caption{The chosen restaurant/university for each participant, showing the choice on the x axis and frequency on the y axis under conditions A and B.}
+\caption{The chosen restaurant/university for each participant, showing the choice on the x axis and frequency on the y axis under conditions A (blue) and B (red).}
 \label{fig:results}
 \end{center}
 \end{figure}
