--- a/chi2012.tex
+++ b/chi2012.tex
@@ -468,16 +468,20 @@ Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixte
 \subsection{Use of Visualisation Features}
 To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
 
-\subsection{Condition B: Use of Websites and Excel}
-In the B conditions, participants were given the option of using websites and or a spreadsheet to make their choice.  For B trials, we measured the fraction of the trial time spent in Excel versus looking at the sites in a rough, 5-value range (0,25,50,75,100\%).  Six individuals used Excel entirely, while one avoided it altogether; most fell somewhere in between, with a median of 50\% use. 
+\subsection{Condition B: Observations and Issues (Websites + Excel)}
+In the B conditions, participants were given the option of using websites and or a spreadsheet to make their choice.  For B trials, we measured the fraction of the trial time spent in Excel versus looking at the sites in a 5-value range (0,25,50,75,100\%).  Six individuals used Excel entirely without consulting the web sites at all, while one avoided Excel altogether; most fell somewhere in between, with a median use of 75\% Excel.   When asked to explain their choice post-hoc, participants who used Excel explained that it saved them the effort of having to individually seach and consolidate information from the websites (10 participants).  Participants who looked at websites chose to do so when they needed to know more than what was provided in the spreadsheets (8 participants), when they mistrusted the information in them (1 participant), or if they were not familiar with Excel (1 participant).
 
-Participants who used websites to make their decisions often encountered several difficulties and issues. In particular, there was significant confusion over the meaning of data points, for example the percentage-based rankings of university teaching by the Times Higher Education. There were numerous usability issues in using websites, particularly in searching for university courses and course requirements. Similarly, participants found it difficult to understand the locations of restaurants in cities that they were not familiar, and could not find a way to plot the shortlist of restaurants onto the same map using the websites. Overall, the users that spent the most time using websites exhibited significant frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations), and all ended up falling back to using the supplied spreadsheets.
+Of the Excel use, most participants made minor formatting and column sizing changes to facilitate reading and interpreting the spreadsheets, while four made extensive edits to the sheets to help them ``think through'' the task in various ways.  These uses of Excel for external cognition varied from merely copying over candidate choices from one sheet to the next, sorting values by multiple columns (which participants had considerable trouble with), and colour-coding cells to allow easy counting of  ``pros'' and ``cons''; ``I can't deal with so many textual values; I need colours to help me see'' (p6).
 
 Participants who opted to use the spreadsheet to support their decisions switched between worksheets to view data from different websites.  They used different approaches to using the spreadsheets, some participants were keen to collate all data onto a single sheet, so that they could compare the values all at once. However, this approach was error prone, for example participants noticing too late that the ordering of rows was different on each sheet, so that their pasted values were incorrectly mapped. Others used pen and paper to collate the values, which was often faster and resulted in less observed frustration. While the majority of users did not
 attempt anything complex with Excel (in fact only one user used charts), there was some advanced use of Excel observed.
 One user explained that they did not like to look at numbers, and so coloured the cells of the types of restaurant, and the
 friends' preferences, and matched the colours to make their decision. Another user calculated their own weighted metric
 of which university to choose by averaging different metrics supplied by the data sources.
+
+Participants who used websites to make their decisions often encountered several difficulties and issues. In particular, there was significant confusion over the meaning of data points, for example the percentage-based rankings of university teaching by the Times Higher Education. There were numerous usability issues in using websites, particularly in searching for university courses and course requirements. Similarly, participants found it difficult to understand the locations of restaurants in cities that they were not familiar, and could not find a way to plot the shortlist of restaurants onto the same map using the websites. Overall, the users that spent the most time using websites exhibited significant frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations), and all ended up falling back to using the supplied spreadsheets.
+
+
 
 \begin{figure}[htbp]
 \begin{center}
