edits and changes

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -466,18 +466,19 @@ Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixte
 % we examined use on performance but nothing significant was found :/
 
 \subsection{Use of Visualisation Features}
-To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
+To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while a majority (15, 75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
 
-\subsection{Condition B: Observations and Issues (Websites + Excel)}
+\subsection{Condition B - Results and Observations}
 In the B conditions, participants were given the option of using websites and or a spreadsheet to make their choice.  For B trials, we measured the fraction of the trial time spent in Excel versus looking at the sites in a 5-value range (0,25,50,75,100\%).  Six individuals used Excel entirely without consulting the web sites at all, while one avoided Excel altogether; most fell somewhere in between, with a median use of 75\% Excel.   When asked to explain their choice post-hoc, participants who used Excel explained that it saved them the effort of having to individually search and consolidate information from the websites (10 participants).  Participants who looked at websites chose to do so when they needed to know more than what was provided in the spreadsheets (8 participants), when they mistrusted the information in them (1 participant), or if they were not familiar with Excel (1 participant).
 
 Of the Excel use, most participants made minor formatting and column sizing changes to facilitate reading and interpreting the spreadsheets, while four made extensive edits to the sheets to help them ``think through'' the task in various ways.  These uses of Excel for external cognition varied from merely copying over candidate choices from one sheet to the next to keep track of their previous selections, to sorting values by multiple columns (which participants had considerable trouble with due to the need to sort columns together), and colour-coding cells to allow easy counting of  ``pros'' and ``cons''; ``I can't deal with so many textual values; I need colours to help me see'' (p6). Another user calculated their own weighted metric of which university to choose by averaging different metrics supplied by the data sources and filling in their own chosen weights.  
 
-Participants ran into a number of difficulties with using the Excel interface. Participants struggled with switching between different worksheets, and having to find the corresponding values in each.  To cope with this fragmentation, some participants attempted to collate all data onto a single sheet, so that they could compare the values all at once as just described; however, this approach was often error prone.  For example, two participants did not notice that the rows in two sheets were in different orders (because of a difference in the renderings of Unviersity names), which caused their pasted values to be incorrectly mapped.  Four participants struggled with sorting columns, and only 1 attempted charting (p7); Excel's charting features caused her considerable difficulty and she eventually gave up trying to display multiple dimenions simultaneously and created simple bar charts instead.
+Participants ran into a number of difficulties with the spreadsheet interface. Participants struggled with looking up values across different worksheets (data sources).  Some participants coped by attempting to collate all data onto a single sheet, so that they could compare the values all at once as just described; however, this approach was often error prone.  For example, two participants did not notice that the rows in two sheets were in different order, causing their pasted values to be incorrectly mapped.  Four participants struggled with sorting columns, and only 1 attempted charting (p7).  Although she attempted to plot multiple factors simultaneously, Excel's charting features caused her considerable difficulty and she eventually resorted at creating multiple simple bar-charts instead.
 
 %%  was use of pen and paper to collate the values, which was often faster and resulted in less observed frustration. While the majority of users did not attempt anything complex with Excel (in fact only one user used charts), there was some advanced use of Excel observed.
 
-Participants who used websites to make their decisions often encountered several difficulties and issues. In particular, there was significant confusion over the meaning of data points, for example the percentage-based rankings of university teaching by the Times Higher Education. There were numerous usability issues in using websites, particularly in searching for university courses and course requirements. Similarly, participants found it difficult to understand the locations of restaurants in cities that they were not familiar, and could not find a way to plot the shortlist of restaurants onto the same map using the websites. Overall, the users that spent the most time using websites exhibited significant frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations), and all ended up falling back to using the supplied spreadsheets.
+%% todo - look up to make sure it was really p7 here 
+Various other difficulties were encountered with the websites. There was significant confusion over various attributes, especially in the University selection task.  For example, p15 could not tell how the teaching score from the Times Higher Education was calculated, in order to assess its relative importance.  Several participants had difficulty finding information they needed because of inconsistencies in site layout, especially finding course requirements, information that ``should be obvious''.  Similar issues were encountered with finding information in the restaurant condition; p7 said ``I wish they would put Cuisine Type in the same place for every restaurant - important information!'' Similarly, participants found it difficult to visualise the locations of restaurants in cities that they were not familiar, and could not find a way to easily map them. Overall, the users that spent the most time using websites exhibited significant frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations), and often ended up swapping back to using the supplied spreadsheets.
 
 \begin{figure}[htbp]
 \begin{center}
@@ -487,7 +488,7 @@ Participants who used websites to make their decisions often encountered several
 \end{center}
 \end{figure}
 
-Notably, a number of users admittedly introduced their own bias into the choices in both A and B conditions: ``I prefer Indian food, so I will choose the Indian restaurant'', and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating those that required bus transfers (the protocol did not mention routing/transfers at all).
+% Notably, a number of users admittedly introduced their own bias into the choices in both A and B conditions: ``I prefer Indian food, so I will choose the Indian restaurant'', and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating those that required bus transfers (the protocol did not mention routing/transfers at all).
 
 \subsection{Survey Results}
 
